Implemented schema till cart and cartItems