@@ -1,38 +1,56 @@
 package gritgear.example.GritGear.service.impl;
 
-import gritgear.example.GritGear.dto.CartItemRequestDTO;
-import gritgear.example.GritGear.dto.CartItemResponseDTO;
+import gritgear.example.GritGear.dto.cartitem.CartItemRequestDTO;
+import gritgear.example.GritGear.dto.cartitem.CartItemResponseDTO;
+import gritgear.example.GritGear.model.Cart;
 import gritgear.example.GritGear.model.CartItem;
+import gritgear.example.GritGear.model.Product;
 import gritgear.example.GritGear.repositry.CartItemRepositry;
+import gritgear.example.GritGear.repositry.CartRepositry;
+import gritgear.example.GritGear.repositry.ProductRepositry;
 import gritgear.example.GritGear.service.CartItemService;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CartItemServiceImpl implements CartItemService {
 
     private final CartItemRepositry cartItemRepository;
+    private final CartRepositry cartRepository;
+    private final ProductRepositry productRepository;
     private final ModelMapper modelMapper;
 
     public CartItemServiceImpl(CartItemRepositry cartItemRepository,
+                               CartRepositry cartRepository,
+                               ProductRepositry productRepository,
                                ModelMapper modelMapper) {
         this.cartItemRepository = cartItemRepository;
+        this.cartRepository = cartRepository;
+        this.productRepository = productRepository;
         this.modelMapper = modelMapper;
     }
 
     @Override
     public CartItemResponseDTO createCartItem(CartItemRequestDTO dto) {
 
-        // DTO → Entity
-        CartItem cartItem = modelMapper.map(dto, CartItem.class);
+        Cart cart = cartRepository.findById(dto.getCartId())
+                .orElseThrow(() ->
+                        new RuntimeException("Cart not found with id " + dto.getCartId()));
+
+        Product product = productRepository.findById(dto.getProductId())
+                .orElseThrow(() ->
+                        new RuntimeException("Product not found with id " + dto.getProductId()));
+
+        CartItem cartItem = new CartItem();
+        cartItem.setCart(cart);
+        cartItem.setProduct(product);
+        cartItem.setQuantity(dto.getQuantity());
 
         CartItem savedItem = cartItemRepository.save(cartItem);
 
-        // Entity → ResponseDTO
-        return modelMapper.map(savedItem, CartItemResponseDTO.class);
+        return mapToResponse(savedItem);
     }
 
     @Override
@@ -40,39 +58,60 @@ public class CartItemServiceImpl implements CartItemService {
 
         return cartItemRepository.findAll()
                 .stream()
-                .map(item -> modelMapper.map(item, CartItemResponseDTO.class))
-                .collect(Collectors.toList());
+                .map(this::mapToResponse)
+                .toList();
     }
 
     @Override
     public CartItemResponseDTO getCartItemById(Long id) {
 
         CartItem cartItem = cartItemRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("CartItem not found with id: " + id));
+                .orElseThrow(() ->
+                        new RuntimeException("CartItem not found with id: " + id));
 
-        return modelMapper.map(cartItem, CartItemResponseDTO.class);
+        return mapToResponse(cartItem);
     }
 
     @Override
     public CartItemResponseDTO updateCartItem(Long id, CartItemRequestDTO dto) {
 
         CartItem existingItem = cartItemRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("CartItem not found with id: " + id));
+                .orElseThrow(() ->
+                        new RuntimeException("CartItem not found with id: " + id));
 
-        // Map updated values
-        modelMapper.map(dto, existingItem);
+        Product product = productRepository.findById(dto.getProductId())
+                .orElseThrow(() ->
+                        new RuntimeException("Product not found with id " + dto.getProductId()));
+
+        existingItem.setProduct(product);
+        existingItem.setQuantity(dto.getQuantity());
 
         CartItem updatedItem = cartItemRepository.save(existingItem);
 
-        return modelMapper.map(updatedItem, CartItemResponseDTO.class);
+        return mapToResponse(updatedItem);
     }
 
     @Override
     public void deleteCartItem(Long id) {
 
         CartItem cartItem = cartItemRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("CartItem not found with id: " + id));
+                .orElseThrow(() ->
+                        new RuntimeException("CartItem not found with id: " + id));
 
         cartItemRepository.delete(cartItem);
+    }
+
+    private CartItemResponseDTO mapToResponse(CartItem cartItem) {
+
+        CartItemResponseDTO response =
+                modelMapper.map(cartItem, CartItemResponseDTO.class);
+
+        response.setCartId(cartItem.getCart().getId());
+        response.setProductId(cartItem.getProduct().getId());
+        response.setProductName(cartItem.getProduct().getName());
+        response.setProductPrice(cartItem.getProduct().getPrice());
+        response.setQuantity(cartItem.getQuantity());
+
+        return response;
     }
 }
